Update from Fidus Writer

--- a/epub/EPUB/document-1.xhtml
+++ b/epub/EPUB/document-1.xhtml
@@ -1,1 +1,92 @@
-undefined
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" xmlns:epub="http://www.idpf.org/2007/ops">
+  <head>
+    <title>CRI000: Front Matter</title>
+    <link rel="stylesheet" type="text/css" href="css/document.css" />
+    <link rel="stylesheet" type="text/css" href="css/aogPdf.css" />
+  </head>
+  <body class="content" data-title="CRI000: Front Matter">
+    <div class="article-part article-title" id="_1_0">CRI000: Front Matter</div>
+    <div class="article-part article-heading article-subtitle" data-hidden="true" />
+    <div class="article-part article-contributors article-authors" data-hidden="true" />
+    <div class="article-part article-richtext article-abstract" data-hidden="true" />
+    <div class="article-part article-tags article-keywords" data-hidden="true" />
+    <div class="article-part article-richtext article-body">
+      <h2 id="H353005">Title page</h2>
+      <p>Crisis Management</p>
+      <p>Textbook for Public Health Services</p>
+      <p>Edited by Ute Teichert &amp; Peter Tinnemann</p>
+      <p>v1.0, 2021</p>
+      <h2 id="H6627615">Pre-release v1.0</h2>
+      <p>In recent years, crisis management is gaining considerably in importance, in the public health services in general and in particular since the SARS-CoV-II pandemic globally. In Germany, decision-making authority for crisis management of biological emergencies resides in principle with the municipal health authorities.</p>
+      <p><strong>In light of the current situation (as of 31 March 2020) involving the spread of the novel coronavirus, we are hereby providing extracts from a preliminary version of our textbook (Krisenmanagement) open-access in English to a global audience.</strong></p>
+      <p>Crisis management tools support staff in the public health services to ensure that the authorities are able to continue functioning in biological emergencies. As a rule, normal administrative structures cannot cope with the challenges that arise in a crisis. Information and communications management for example must be adapted if it is to cope with increased demands. If sufficient specialist personnel are not available, competences have to be pooled and provided from a more central point. This textbook is designed to provide employees of public health offices, as well as other public health institutions, with pointers on how to systematically prepare themselves for preventing hazards in case of crisis, and familiarise them with the basics of crisis management. As well as covering specialised aspects, the textbook also provides recommendations in particular on operational planning and working in teams. It is supplemented with checklists designed and established in practise to serve as practical tools.</p>
+      <p>The content brought together in this unique textbook is based on the authors' years of theoretical study and practical experience within public health services. <strong>This textbook is a joint work of all the authors involved, and does not represent the opinion of individual institutions or individual authors.</strong></p>
+      <p>We are planning to update and expand this textbook in the future. We would therefore be delighted if you could share with us your suggestions, comments and additions. We are using <strong><a href="https://hypothes.is/">Hypothes.is</a></strong> for your comments and additions to our textbook.</p>
+      <h2 id="H8111132">Publication details</h2>
+      <p>Crisis Management<br />Textbook for Public Health Services<br />ISBN 978-1-906496-97-5<br />DOI <a href="https://zenodo.org/deposit/4587727" title="https://zenodo.org/deposit/4587727">10.5281/zenodo.4587727</a><br />Date 2021<br />Place Berlin</p>
+      <p>TWH Linking Knowledge UG<br />Gustav-Heinemann-Ufer 56<br />50968 Köln</p>
+      <p>© 2021 the authors. Creative Commons Attribution ShareAlike 4.0 International (CC BY-SA 4.0) <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.de">https://creativecommons.org/licenses/by-sa/4.0/deed.de</a><br />Printed by Lightning Source, Ingram Content Group Inc.</p>
+      <p>German language version<br />ISBN 978-3-9812871-2-7<br />DOI <a href="https://doi.org/10.25815/h0ec-f967">10.25815/h0ec-f967</a><br /><a href="https://akademie-oeffentliches-gesundheitswesen.github.io/krisenmanagment/">GitHub</a></p>
+      <p />
+      <h2 id="H2129478">About us</h2>
+      <p>This textbook is based on the Textbook Krisenmanagement (DOI <a href="https://doi.org/10.25815/h0ec-f967">10.25815/h0ec-f967</a>), a joint project of the <a href="https://www.akademie-oegw.de/startseite.html" title="https://www.akademie-oegw.de/startseite.html">Academy of Public Health Services</a> and the <a href="https://www.tib.eu/en/research-development/open-science">Open Science Lab</a> of the <a href="https://www.tib.eu/" title="https://www.tib.eu/">TIB</a> – Leibniz-Information Centre for Science and Technology University Library. Translation from German to English was provided by Engagement Global gGmbh.</p>
+      <h3 id="H1593607">Funding</h3>
+      <p>The project was funded by the German <a href="https://www.bundesgesundheitsministerium.de/english-version.html">Federal Ministry of Health</a> (BMG). </p>
+      <p>The translation of this book into English was supported by the <a href="https://skew.engagement-global.de/connective-cities.html" title="https://skew.engagement-global.de/connective-cities.html">Connective Cities Project</a> of Engagement Global, on behalf of the German Federal Ministry for Economic Cooperation and Development (BMZ).</p>
+      <h3 id="H3712911">Open access</h3>
+      <p>This textbook and manual, which is available online free of charge, is designed as a practical tool for you to use in your daily work. To promote research and teaching in order to improve public health, it is important that all staff of public health services, interested professionals and the public at large have access at all times to the best available knowledge on public health. A printed copy of the most up-to-date version of the textbook and manual is available on demand.</p>
+      <h3 id="H7708600">Copyright notice and licence</h3>
+      <p>This textbook is an <strong>Open Educational Resource (OER)</strong>, which means it is available under the licence Creative Commons – Attribution-ShareAlike 4.0 International (<a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode">CC BY-SA 4.0</a>). You may reproduce, process, remix, modify or build on the material in any format or medium, for any purpose, including commercial purposes. The licensor cannot revoke these freedoms, provided that you comply with the terms of the licence. You must <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode">make appropriate reference to copyright and similar rights</a>, include a link to the license and indicate whether any changes <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode">have been</a> made. This information may be provided in any appropriate manner, but not in such a way as to create the impression that the licensor is supporting you or your use of the material directly. Nor may you insert any additional clauses or use any technical methods <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode">that would legally prohibit others</a> from doing anything the license permits.</p>
+      <p>No guarantees are given nor is any warranty provided.</p>
+      <p>The licence may not provide you with permission to do everything you would need to do when using the textbook for your particular purpose. There may for instance be other rights, such as rights of <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode" title="https://creativecommons.org/licenses/by-sa/4.0/legalcode">privacy and data protection</a>, which you will need to observe and which will restrict your use of the material accordingly.</p>
+      <h3 id="H7096628">Help us to improve the textbook</h3>
+      <p>We would be delighted to receive comments and feedback from all readers, regardless of their specific expertise or background. We are using <strong><a href="https://hypothes.is/">Hypothes.is</a></strong> for your comments and additions to our textbook.</p>
+      <p>The textbook is made available as a GitHub repository.</p>
+      <h3 id="H2766812">Sustainability and further development</h3>
+      <p>The product of this collaborative writing process has been and will continue to be supplemented and improved. Here, readers too can also play an active role by providing their feedback and addenda. The authors of all the texts are conscious of the fact that the themes covered so far represent only segments of the range of activities performed by public health services.</p>
+      <p>Sine this is an agile project that will be continuously developed together with the Academy of Public Health Services, as well as continuously updating the existing chapters it will also be possible to add further thematic areas.</p>
+      <h3 id="H99013">Method</h3>
+      <p>All texts were developed and written using the so-called <strong>book sprint</strong> method. A <strong>book sprint</strong> is an agile method that enables authors to collaboratively write longer and more complex texts in a short period of time. All books sprints were organised and carried out jointly by the Academy of Public Health Services and the Open Science Lab of the TIB – Leibniz-Information Centre for Science and Technology</p>
+      <p>University Library. The book sprint method enables authors to create digital content on a goal-oriented basis.</p>
+      <p>It is based on the principles of sharing, co-development, community building and collective ownership of the product. This open, transparent method has already been successfully used at several institutions, including the TIB. It is based on goal-competence profiles defined in advance, on teaching modules that have been tried and tested in prior teaching settings, and on practical examples of application (use cases).</p>
+      <p>Authors use digital technologies to write the content This enables a joint process of concurrently writing texts which are designed as a single collectively owned product in their entirety, until then final result is achieved. Chapters or entire books are written in this manner. In intensive three-day book sprints we have worked with up to ten experts on a selected topic Facilitated by a book sprint moderator with experience in media education, participants create joint content on selected topics related to work in the public health service.</p>
+      <h3 id="H691848">How the textbook was produced</h3>
+      <p>This original textbook Krisenmanaement was a joint project of the <a href="https://www.akademie-oegw.de/startseite.html" title="https://www.akademie-oegw.de/startseite.html">Academy of Public Health Services</a> and the <a href="https://www.tib.eu/en/research-development/open-science">Open Science Lab</a> of the <a href="https://www.tib.eu/" title="https://www.tib.eu/">TIB</a> – Leibniz-Information Centre for Science and Technology University Library.</p>
+      <p>Together with teachers from the Academy, experts from different fields of public health have been co-authoring texts for this series of textbooks in book sprints since 2019.</p>
+      <p>The initial phase of collaborative writing was followed by an editing phase during which supplemental content was inserted and existing content revised. The text contributions are based on a broad range of relevant literature, years of experience gained by long-standing public health practitioners, and experiences and suggestions put forward by young professionals with an interest in public health.</p>
+      <p> In all the textbooks, jointly defined chapters on e.g. history, objectives, tasks, structures and definitions are described in detail. Each book has been designed as a comprehensive, self-contained work, and can be read either in conjunction with the other books or as a stand-alone reference work in its own right.</p>
+      <p>The entire textbook series is designed as an Open Educational Resource (OER) and is published under an open licence. This allows free access, editing and further processing by others without restriction or with only minor restrictions.</p>
+      <p>The original textbook in German and the this textbook will be updated and is available as a printed textbook at a reasonable price.</p>
+      <h3 id="H8101608">Disclaimer</h3>
+      <p>The content brought together in this unique textbook is based on the authors' years of theoretical study and practical experience in public health. It is designed to provide helpful information on the topics discussed.</p>
+      <p><strong>This text book is a collaborative work by all the authors involved and does not represent the opinion of individual institutions for which the authors work.</strong></p>
+      <p>The authors, editors and translators made every effort to ensure that the information accessible through this book is correct, complete or up-to-date, but accept no liability for this. They make this textbook and its contents available on an 'as is' basis, and give no assurances or guarantees of any kind whatsoever with respect to this book or its content.</p>
+      <p>Neither the authors, the editors, the translators or any other actors involved are liable for any damages resulting from, or connected with, the use of this book. This is a comprehensive limitation of liability that applies to all damage of any kind, including (but not restricted to) compensatory, direct, indirect or consequential damages; loss of data, income or profit; loss of or damage to property; and claims by third parties.</p>
+      <p>References to other websites, literature or other sources are provided for information purposes only, and do not constitute an endorsement of websites or other sources. Readers should also be aware that websites referred to in this textbook are subject to change.<br /></p>
+      <h2 id="H7919849">Authors</h2>
+      <p><strong>Dipl.-Med. Heidrun Böhm<br/></strong>Saxon State Ministry for Social Affairs and Social Cohesion, Dresden</p>
+      <p><strong>Detlef Cwojdzinski<br/></strong>ex-Senate Administration for Health and Equality, Berlin</p>
+      <p><strong>Ulrike Grote, MPH<br/></strong>Robert Koch Institute, Berlin</p>
+      <p><strong>Dr. med. Kalle Heitkötter<br/></strong>Public Health Office, Düsseldorf</p>
+      <p><strong>Dr. med. Christine Knauer<br/></strong>Public Health Office, District Administration of Rhein-Pfalz District</p>
+      <p><strong>Dr. med. Ingrid Möller<br/></strong>Public Health Office, City of Leipzig</p>
+      <p><strong>Guido Pukropski<br/></strong>District Administration, Düsseldorf</p>
+      <p><strong>Dr. rer. nat. Julia Sasse<br/></strong>Robert Koch Institute, Berlin</p>
+      <p><strong>Tanja Schmidt, MPH<br/></strong>WHO Regional Office for Europe, Copenhagen</p>
+      <p><strong>Dr. med. Ute Siering<br/></strong>Public Health Office, District Administration of Ludwigslust-Parchim</p>
+      <p><strong>Dr. med. Karlin Stark<br/></strong>Regional Council, Stuttgart</p>
+      <p><strong>Dr. med. Katrin Steul, BSc.<br/></strong>Public Health Office, City of Frankfurt am Main</p>
+      <p><strong>Dr. med. Peter Tinnemann, MPH<br/></strong>Academy of Public Health Services, Berlin<br /></p>
+      <h2 id="H6834922">Acknowledgements and thanks</h2>
+      <p><strong>Anna Eckhardt </strong>and<strong> Lambert Heller </strong>for their support in<strong> </strong>developing the project and conducting the book sprint.</p>
+      <p><strong>Dr. med. Jakob Schumacher </strong>and<strong> Simon Worthington </strong>for their support in<strong> </strong>implementing the project and for the technical realisation on GitHub.</p>
+      <p><strong>Bernd Schiller </strong>and<strong> Petra Münstedt </strong>for carefully checking and meticulously correcting the text of the<strong> </strong>entire work.</p>
+      <p><strong>Dr. med. Claudia Kaufhold </strong>and<strong> André Riffer </strong>for checking the thematic consistency and accuracy of the content.</p>
+      <p><strong>Johannes Wilm</strong>, and the<strong> <a href="https://www.fiduswriter.org/who-we-are/">FidusWriter.org team</a></strong>,<strong> </strong>for their technical<strong> </strong>support.</p>
+      <p>The <strong>German</strong> <strong>Federal Ministry of Health </strong>(Bundesministerium für Gesundheit)<strong>,</strong> which funded the collaborative creation of our textbook. Without this funding the project would not have been possible.</p>
+      <p>The translation of this book into English was financed and supported by <strong>Engagement Global GmbH</strong>, on behalf of the <strong>German Federal Ministry for Economic Cooperation and Development</strong> (Bundesministerium für wirtschaftliche Zusammenarbeit und Entwicklung).</p>
+    </div>
+    <section class="fnlist" role="doc-endnotes" />
+  </body>
+</html>
