Update from Fidus Writer

--- a/epub/EPUB/document-2.xhtml
+++ b/epub/EPUB/document-2.xhtml
@@ -1,1 +1,40 @@
-undefined
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" xmlns:epub="http://www.idpf.org/2007/ops">
+  <head>
+    <title>CRI001: Definitions</title>
+    <link rel="stylesheet" type="text/css" href="css/document.css" />
+    <link rel="stylesheet" type="text/css" href="css/aogPdf.css" />
+  </head>
+  <body class="content" data-title="CRI001: Definitions">
+    <div class="article-part article-title" id="_2_0">CRI001: Definitions</div>
+    <div class="article-part article-heading article-subtitle" data-hidden="true" />
+    <div class="article-part article-contributors article-authors" data-hidden="true" />
+    <div class="article-part article-richtext article-abstract" data-hidden="true" />
+    <div class="article-part article-tags article-keywords" data-hidden="true" />
+    <div class="article-part article-richtext article-body">
+      <p>In infection control and population protection, many terms and abbreviations are used whose meaning is not always immediately evident. The Robert Koch Institute (RKI) and the Federal Office for Civil Protection and Disaster Assistance (BBK) explain common technical terms.</p>
+      <p>The RKI website provides definitions, notes and interpretations (in German only) on <strong><a href="https://www.rki.de/DE/Content/Service/Publikationen/Fachwoerterbuch_Infektionsschutz.pdf">specialist terms in infection control and epidemiology</a></strong>.</p>
+      <p>In Germany, 'population protection' is used as a generic term to refer to all tasks and measures for disaster risk management performed by municipalities and federal states, and for civil protection performed by the national government. The BBK has published a practitioner's glossary (in German only) defining <strong><a href="https://www.bbk.bund.de/SharedDocs/Downloads/BBK/DE/Publikationen/Praxis_Bevoelkerungsschutz/Glossar_2018.pdf">selected key terms in population protection</a></strong>.</p>
+      <p>Important in the context of the spread of the coronavirus SARS-CoV-2 are the definitions of the following terms:</p>
+      <h2 id="H3878242">Outbreak</h2>
+      <p>Sudden increase in the incidence of disease, either localised or scattered, which exceeds the incidence of that disease which would be expected at that time, in that place and in that population, and for which a common source or an epidemic link is highly probable or proven. In other words, an outbreak comprises an increased incidence of a disease that can be traced to a common cause.</p>
+      <p>Where several cases meet the same diagnostic criteria and an epidemiological link exists, the term outbreak is applied. In cases of major clinical and epidemiological significance (rare and dangerous diseases), isolated infections may sometimes also be described as 'outbreaks'. There is no sharp distinction between the terms 'outbreak' and 'epidemic', nor is there a fundamental difference, because an epidemic in this sense is a major outbreak.</p>
+      <ul id="L12296101">
+        <li>
+          <p><strong>Secondary outbreak </strong>A further outbreak in the vicinity of a known<strong> </strong>outbreak where a link exists (e.g. outbreaks linked within a family or in a community institution).</p>
+        </li>
+        <li>
+          <p><strong>Satellite outbreak </strong>A small outbreak that is causally linked to larger events far away.</p>
+        </li>
+      </ul>
+      <h2 id="H7673735">Endemic</h2>
+      <p>Continuous occurrence (no time limit) of a disease or a pathogen in a certain region or a certain population. Within the population in a given region, all persons have a similar risk of contracting the disease.</p>
+      <h2 id="H4123822">Epidemic</h2>
+      <p>Wave of illness of epidemic proportions; the number of cases of illness that share the same aetiology increases relative to the baseline. The process is limited to a specific period of time and a specific place.</p>
+      <h2 id="H4394080">Pandemic</h2>
+      <p>The occurrence of a new global spread of an infectious disease with a high number of infections, usually also involving severe illness, over a limited period of time. If human to human transmission continues e.g. as a result of a novel influenza virus, the World Health Organization may 'declare' a pandemic in accordance with the International Health Regulations.</p>
+      <p>Irrespective of whether it goes on to declare a pandemic, the World Health Organization may already declare a public health emergency of international concern e.g. when a novel human pathogen or another acute health hazard arises.</p>
+    </div>
+    <section class="fnlist" role="doc-endnotes" />
+  </body>
+</html>
