--- a/epub/EPUB/document-6.xhtml
+++ b/epub/EPUB/document-6.xhtml
@@ -1,1 +1,25 @@
-undefined
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" xmlns:epub="http://www.idpf.org/2007/ops">
+  <head>
+    <title>CRI005: Scenarios – CBRN</title>
+    <link rel="stylesheet" type="text/css" href="css/document.css" />
+    <link rel="stylesheet" type="text/css" href="css/aogPdf.css" />
+  </head>
+  <body class="content" data-title="CRI005: Scenarios – CBRN">
+    <div class="article-part article-title" id="_6_0">CRI005: Scenarios – CBRN</div>
+    <div class="article-part article-heading article-subtitle" data-hidden="true" />
+    <div class="article-part article-contributors article-authors" data-hidden="true" />
+    <div class="article-part article-richtext article-abstract" data-hidden="true" />
+    <div class="article-part article-tags article-keywords" data-hidden="true" />
+    <div class="article-part article-richtext article-body">
+      <h2 id="H2656935">Introduction</h2>
+      <p>The abbreviation CBRN stands for <strong>chemical, biological, radiological and nuclear</strong>. This covers non-weapons-grade and weapons-grade chemical, biological, radiological and nuclear materials that can cause significant damage. Non-weapons grade materials are traditionally referred to as dangerous goods, and can also include contaminated foodstuffs, livestock and plants.</p>
+      <p>There are many threats apart from just the deliberate release of pathogens. There are also environmental factors which play a major role. In all CBRN scenarios, public health offices can be called on in various different ways. In biological scenarios the staff of the public health office usually hold lead responsibility during the primary and secondary phases of the emergency. In C and R/N scenarios they are more likely to hold professional responsibility during the second phase, where there is then a particular focus on medical care after an incident.</p>
+      <h2 id="H411227">B scenarios (synonymous with biological emergencies)</h2>
+      <p>The following section deals with emergencies arising in conjunction with infectious diseases.</p>
+      <h2 id="H5103505">C-R/N scenarios</h2>
+      <p>C-R/N scenarios will be integrated into the textbook at a later point in time and are not covered by this pre-release version.</p>
+    </div>
+    <section class="fnlist" role="doc-endnotes" />
+  </body>
+</html>
