Update from Fidus Writer

--- a/epub/EPUB/document-10.xhtml
+++ b/epub/EPUB/document-10.xhtml
@@ -1,1 +1,133 @@
-undefined
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de" xmlns:epub="http://www.idpf.org/2007/ops">
+  <head>
+    <title>CRI11Annex - Checklist for public health offices in crisis mode</title>
+    <link rel="stylesheet" type="text/css" href="css/document.css" />
+    <link rel="stylesheet" type="text/css" href="css/aogPdf.css" />
+  </head>
+  <body class="content" data-title="CRI11Annex - Checklist for public health offices in crisis mode">
+    <div class="article-part article-title" id="_10_0">CRI11Annex - Checklist for public health offices in crisis mode</div>
+    <div class="article-part article-heading article-subtitle" data-hidden="true" />
+    <div class="article-part article-contributors article-authors" data-hidden="true" />
+    <div class="article-part article-richtext article-abstract" data-hidden="true" />
+    <div class="article-part article-tags article-keywords" data-hidden="true" />
+    <div class="article-part article-richtext article-body">
+      <p> </p>
+      <table id="T85724381" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
+        <caption><span class="label"/></caption>
+        <tbody>
+          <tr>
+            <td>
+              <p><em><strong>Topic?</strong></em>       </p>
+            </td>
+            <td>
+              <p />
+            </td>
+            <td>
+              <p><em><strong>Title: Public health offices in crisis mode</strong></em></p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p>Target group: </p>
+            </td>
+            <td>
+              <p />
+            </td>
+            <td>
+              <p>Date:</p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <p>                    </p>
+      <h3 id="H1727143">Alerts</h3>
+      <p>☐   Rules for receipt of alerts (via on-call service?)</p>
+      <p>☐   Checklist for first recipient of alert/on-call service</p>
+      <p>☐   Alert list (scenario-dependent)</p>
+      <p>☐   Internal alert list for the public health office</p>
+      <p>☐   Notification list for external contacts </p>
+      <h3 id="H368347">Rules for access to public health office</h3>
+      <p>☐   Persons authorised to access</p>
+      <p>☐   Organisational arrangements for access (which routes, location of key cabinets etc.)</p>
+      <h3 id="H6256762">Organisation</h3>
+      <p>☐   Define structure and scope of roles</p>
+      <p>☐   Take into account integration of the crisis/work team into the crisis team structures of the region</p>
+      <p>☐   Take into account the unfolding situation when setting up the team</p>
+      <p>☐   Define tasks and agree these with heads of institution</p>
+      <p>☐   Define processes/channels of communication</p>
+      <p>☐   Define regular procedures e.g. discussions of the situation (schedule)</p>
+      <p>☐   Define specialised areas of work, assign personnel and determine responsibilities</p>
+      <p> </p>
+      <h3 id="H6553733">Human resources</h3>
+      <p>☐   Overview of roles to be assigned</p>
+      <p>☐   Overview of available staff</p>
+      <p>☐   Staff planning overview</p>
+      <p>☐   Specimen of duty roster</p>
+      <p>☐   Overview of staff presence </p>
+      <p>☐   Involvement of staff council </p>
+      <p>☐   Overtime arrangements, ban on leave</p>
+      <p>☐   Foreign language skills of staff</p>
+      <p>☐   Staffing of hotline, if applicable</p>
+      <p>☐   Administrative support (staff deployment, duty scheduling)</p>
+      <p>☐   External consultants from other authorities and institutions </p>
+      <h3 id="H1488738">Team leadership</h3>
+      <p>☐   Select personnel, think about deputies </p>
+      <p>☐   Draw up checklist for tasks</p>
+      <p>☐   How will task control be performed? </p>
+      <h3 id="H3845044">Situation reports </h3>
+      <p>☐   Identify and train suitable staff</p>
+      <p>☐   Available data from existing sources</p>
+      <p>☐   Specimen mission diary (link to template) </p>
+      <p>☐   Specimen situation report</p>
+      <h3 id="H5542312">Infrastructure (rooms, technology)</h3>
+      <p><strong>For details see separate checklist</strong></p>
+      <p>☐   Room plan</p>
+      <p>☐   Technical equipment</p>
+      <p>☐   Alternative location</p>
+      <p>  </p>
+      <h3 id="H5459435">Organisation  </h3>
+      <h4 id="H2920450">Technical content, FAQs</h4>
+      <p>☐   Responsible for preparing content</p>
+      <p>☐   Sources (RKI, BMG, WHO etc.)</p>
+      <p>☐   Preparation of handouts for workstations/updates</p>
+      <h4 id="H670308">Staffing of hotline</h4>
+      <p> ☐   Professional support (external staff, contract workers if possible)</p>
+      <p>☐   Staffing of hotline (shift change every 4 -6 hours) </p>
+      <p>☐   Duty roster</p>
+      <p> </p>
+      <table id="T15702181" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
+        <caption><span class="label"/></caption>
+        <tbody>
+          <tr>
+            <td>
+              <p><em><strong>Institution:</strong></em>     </p>
+            </td>
+            <td>
+              <p />
+            </td>
+            <td>
+              <p><em><strong>Version:</strong></em></p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p>Prepared by:</p>
+            </td>
+            <td>
+              <p />
+            </td>
+            <td>
+              <p>Filed under:</p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <p>                                                      </p>
+      <p> </p>
+      <p> </p>
+      <p> </p>
+    </div>
+    <section class="fnlist" role="doc-endnotes" />
+  </body>
+</html>
