Update from Fidus Writer

--- a/epub/EPUB/document-9.xhtml
+++ b/epub/EPUB/document-9.xhtml
@@ -1,1 +1,40 @@
-undefined
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de" xmlns:epub="http://www.idpf.org/2007/ops">
+  <head>
+    <title>CRI11Annex - Abbreviations</title>
+    <link rel="stylesheet" type="text/css" href="css/document.css" />
+    <link rel="stylesheet" type="text/css" href="css/aogPdf.css" />
+  </head>
+  <body class="content" data-title="CRI11Annex - Abbreviations">
+    <div class="article-part article-title" id="_9_0">CRI11Annex - Abbreviations</div>
+    <div class="article-part article-heading article-subtitle" data-hidden="true" />
+    <div class="article-part article-contributors article-authors" data-hidden="true" />
+    <div class="article-part article-richtext article-abstract" data-hidden="true" />
+    <div class="article-part article-tags article-keywords" data-hidden="true" />
+    <div class="article-part article-richtext article-body">
+      <p />
+      <p><strong>ABAS </strong>Committee on Biological Agents at the Federal Ministry of Labour and Social Affairs</p>
+      <p><strong>ADR </strong><em>Accord européen relatif au transport international des<strong> </strong>marchandises Dangereuses par Route</em> (European Agreement concerning the International Carriage of Dangerous Goods by Road)</p>
+      <p><strong>AFT </strong>Analytical Task Force</p>
+      <p><strong>BBK </strong>Federal Office for Civil Protection and Disaster Assistance<strong> </strong><a href="https://www.bbk.bund.de/EN/Home/home_node.html">(https://www.bbk.bund.de/EN/Home/home_node.html)</a></p>
+      <p><strong>BMG </strong>Federal Ministry of Health<strong> </strong><a href="https://www.bundesgesundheitsministerium.de/en/en.html">(https://www.bundesgesundheitsministerium.de/en/en.html)</a></p>
+      <p><strong>BMI </strong>Federal Ministry of the Interior, Building and Community<strong> </strong><a href="https://www.bmi.bund.de/EN/home/home_node.html">(https://www.bmi.bund.de/EN/home/home_node.html)</a> </p>
+      <p><strong>BMU </strong>Federal Ministry for the Environment, Nature Conservation and Nuclear<strong> </strong>Safety <a href="https://www.bmu.de/en/">(https://www.bmu.de/en/)</a></p>
+      <p><strong>CBRN </strong>chemical, biological, radiological and nuclear</p>
+      <p><strong>FFP </strong>Filtering Face Piece</p>
+      <p><strong>HCID </strong>High Consequence Infectious Diseases <strong> </strong></p>
+      <p><strong>GGVSEB </strong>Ordinance on the transport of dangerous goods by road, rail and inland waterways</p>
+      <p><strong>IfSG </strong>Protection against Infection Act</p>
+      <p><strong>IGV </strong>International Health Regulations</p>
+      <p><strong>MCI </strong>Mass-Casualty Incident</p>
+      <p><strong>PEP </strong>Post-Exposure Prophylaxis</p>
+      <p><strong>RKI </strong>Robert Koch Institute (<a href="https://www.rki.de/EN/Home/homepage_node.html" title="https://www.rki.de/EN/Home/homepage_node.html">https://www.rki.de/EN/Home/homepage_node.html</a>)</p>
+      <p><strong>SARS</strong> Severe Acute Respiratory Syndrome</p>
+      <p><strong>STAKOB </strong>Competence and Treatment Centres for high consequence infectious diseases</p>
+      <p><strong>TRBA </strong>Technical Rules for Biological Agents</p>
+      <p><strong>VHF </strong>Viral Haemorrhagic Fever</p>
+      <p><strong>PPE </strong>Personal Protective Equipment</p>
+    </div>
+    <section class="fnlist" role="doc-endnotes" />
+  </body>
+</html>
